--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		html { scroll-behavior: smooth; }
 		.hero-pattern {
 		    background-color: black;
-		    background-image: url(https://acr-a.com/img/bg2.png);
+		    background-image: url(/img/bg2.png);
 		    
 		    background-position: center;
   /* 防止图片重复 */
@@ -56,7 +56,7 @@
 				<div class="flex items-center">
 					<div class="flex-shrink-0 flex items-center gap-3">
 						<div class="w-10 h-10 bg-primary rounded-full flex items-center justify-center text-white text-xl">
-						<img src="https://acr-a.com/img/logo.png" alt="ACRA Logo" class="w-12 h-12 object-contain">
+						<img src="/img/logo.png" alt="ACRA Logo" class="w-12 h-12 object-contain">
 						</div>
 						<div>
 							<h1 class="text-lg font-bold text-primary leading-tight">亚裔民权联合会</h1>
