--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="亚裔民权联合会 华人互助 " />
 <meta name="description" content="站在一起，看见彼此！让每一位亚裔在美国都能活得更有底气、更有尊严。" />
 	
-	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
@@ -56,7 +56,7 @@
 				<div class="flex items-center">
 					<div class="flex-shrink-0 flex items-center gap-3">
 						<div class="w-10 h-10 bg-primary rounded-full flex items-center justify-center text-white text-xl">
-						<img src="/img/logo.png" alt="ACRA Logo" class="w-12 h-12 object-contain">
+						<img src="img/logo.png" alt="ACRA Logo" class="w-12 h-12 object-contain">
 						</div>
 						<div>
 							<h1 class="text-lg font-bold text-primary leading-tight">亚裔民权联合会</h1>
