--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		html { scroll-behavior: smooth; }
 		.hero-pattern {
 		    background-color: black;
-		    background-image: url(/img/bg2.png);
+		    background-image: url(img/bg2.png);
 		    
 		    background-position: center;
   /* 防止图片重复 */
@@ -171,7 +171,7 @@ As immigration policies continue to shift, the risks of sudden detention and dep
 						</div>
 					</div>
 					<div class="relative h-64 lg:h-auto bg-gray-800">
-						<div class="absolute inset-0 bg-cover bg-center opacity-40" style="background-image: url('https://acr-a.com/img/bg3.png');"></div>
+						<div class="absolute inset-0 bg-cover bg-center opacity-40" style="background-image: url('img/bg3.png');"></div>
 						<div class="absolute inset-0 flex flex-col items-center justify-center p-8 text-center">
 							<i class="fa-solid fa-shield-halved text-6xl text-secondary mb-4"></i>
 							<p class="text-white text-xl font-medium">不再独自挣扎 <br> No Longer Struggling Alone</p>
